# sss

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Config.h.in  PCH.h  README.md
assets/shaders/: blurr.frag  blurr.vert  cube-map.vert  env-to-cube-map.frag  env-to-cube-map.vert  fb-quad-final.frag  final-output.frag  g-buffer-main.frag  g-buffer.frag  g-buffer.vert  main.frag  main.vert  mesh.frag  mesh.vert  quad.vert  shadow.frag  shadow.vert  sky-box.frag  sss-blur.frag  sss-blur.vert
notes/: SSS Techniques.docx  papers.txt
src/: Absorption.h  Application.cpp  Application.h  CMakeLists.txt  Main.cpp  MathDefines.h  define.hpp
src/camera/: BaseCamera.h  CMakeLists.txt  FreeflyCamera.cpp  FreeflyCamera.h  FreeflyCamera.hpp  TrackballCamera.cpp  TrackballCamera.h  baseCamera.hpp
src/model/: BaseModel.h  CMakeLists.txt  CubeMesh.cpp  CubeMesh.h  MaterialMesh.cpp  MaterialMesh.h  MaterialMeshModel.cpp  MaterialMeshModel.h  Mesh.h  Mesh.inl  QuadMesh.cpp  QuadMesh.h  QuadModel.cpp  QuadModel.h  TriangleMesh.cpp  TriangleMesh.h  TriangleMeshModel.cpp  TriangleMeshModel.h  triangleMesh.hpp  triangleMeshModel.hpp
src/models/: BaseModel.h  CMakeLists.txt  TriangleMesh.cpp  TriangleMesh.h  TriangleMeshModel.cpp  TriangleMeshModel.h  baseModel.hpp  triangleMesh.cpp  triangleMesh.hpp  triangleMeshModel.cpp  triangleMeshModel.hpp
src/shader/: CMakeLists.txt  Shader.cpp  Shader.h  Shader.hpp  ShaderManager.cpp  ShaderManager.h  ShaderManager.hpp  ShaderProgram.cpp  ShaderProgram.h
src/shaders/: mesh.frag  mesh.vert
tmp/: SSS Techniques.docx
(+16 files in other folders)
